 
 + = Additions since previous version
 ! = Bug fixes since previous version
 ~ = Changes   since previous version
 - = Features that has been removed

1.9 beta 3 (2011-04-??)
 + Map source UMP-pcPL reactivated
 + [Nokia] Sports Tracker file extension changed to jpg (feature request #3066161)
 + Reactivated atlas format "TwoNav (RMAP)"
 + New map source: FAA Sectional Charts (aeromaps.us)

1.9 beta 2 (2011-04-06)
 ! Custom atlas map source / locally generated tiles map source
 + New map source for using tiles from zip file(s)
 + Removed all map sources except the OSM related - for details see 
    http://sourceforge.net/projects/mobac/forums/forum/861096/topic/4470412

1.9 beta 1 (2011-03-29)
 + New map source: OpenStreetMap MapQuest
 + New map source: OpenStreetMap Bing layer (Mapnik powered by Microsoft)
 ~ Maximum zoom level of OpenStreetMap Mapnik decreased to 16 (zoom levels 
    17+ are blocked on server side because of high server stress for 
    generating such tiles) 
 + New custom map source type: reading tiles offline from an OSMTracker/AndNav/
    BackCountry Navigator/Maverick/OSMAND atlas (from file system)
 ~ Atlas format PNG+Worldfile: projection file for Arcgis added and calculation 
    improved (patch by user mmartin2)
 ~ JPEG compression level selectable for Magellan (RMP) atlas format

1.9 preview 14 (2011-03-17)
 + Osmdroid SQLite: Tile image format conversion implemented
 - Osm Hiking maps removed (excluding the "Wanderreitkarte Abo" version)
 - Outdooractive.com maps removed as requested by map provider

1.9 preview 13 (2011-03-12)
 + Download to tile store without creating an atlas:  
    new atlas format "Tile store download only"
 ! BeanShell map sources could not be used with certain atlas formats
 + New map source: Israel Topo (Amudanan) with and without trails 

1.9 preview 12 (2011-03-05)
 ~ Cykloatlas: max zoom level extended to 16
 + New map source: Canada Toporama  